--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,34 @@
+name: Update JSON File on GitHub
+
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'test.json'  # Update hanya ketika file test.json berubah
+
 jobs:
   update-json:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Update JSON file
-        run: |
-          echo '{"products": [{"id": 1, "productName": "Updated Product"}]}' > products.json
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-      - name: Configure Git
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Install dependencies
+        run: npm install
 
-      - name: Commit and push changes
-        run: |
-          git add products.json
-          git commit -m "Update JSON file"
-          git push https://github.com/${{ github.repository }} HEAD:${{ github.ref }} --force
+      - name: Run update script
+        run: node update-json.js
+
+      - name: Commit changes
+        run: git commit -am "Update JSON file with product data"
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Menggunakan token dari GitHub Secrets
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push changes
+        run: git push
