--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -14,10 +14,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18' # Gunakan versi terbaru yang stabil
+
       - name: Install dependencies
         run: npm install axios
 
       - name: Run update-json script
         run: node update-json.js
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
